--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>clique para alterar o circulo</h1>
     <div id="circulo"></div>
-    <botton onclick="alterarCirculo()">Alterar Circulo</botton>
+    <button onclick="alterarCirculo()">Alterar Circulo</button>
 
     <script src="script.js"></script>
     
